Добавлена возможность прикреплять файлы
