# src/main/java/ru/smc/smc/api/application/common/model/request/MessageFileRequest.java
@@ -1,0 +1,10 @@
+package ru.smc.smc.api.application.common.model.request;
+
+import lombok.Data;
+
+@Data
+public class MessageFileRequest {
+    private String fileName;
+    private String mimeType;
+    private String contentBase64;
+}
