# src/main/java/ru/smc/smc/api/application/service/distribution/DistributionFileService.java
@@ -2,16 +2,14 @@ package ru.smc.smc.api.application.service.distribution;
 
 import org.springframework.stereotype.Service;
 import ru.smc.smc.api.application.common.enums.AdminDistributionType;
+import ru.smc.smc.api.application.common.exceptions.BadRequestException;
 import ru.smc.smc.api.application.common.exceptions.NotFoundException;
+import ru.smc.smc.api.application.common.model.request.MessageFileRequest;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Locale;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 @Service
 public class DistributionFileService {
@@ -19,8 +17,20 @@ public class DistributionFileService {
     private static final int FILES_LIMIT = 10;
     private static final Path DISTRIBUTIONS_FILES_PATH = Path.of("config", "files", "distributions");
 
+    public void replaceFiles(AdminDistributionType distributionType, List<MessageFileRequest> files) {
+        Path directory = getDistributionDirectory(distributionType);
+
+        try {
+            Files.createDirectories(directory);
+            deleteOldFiles(directory);
+            saveFiles(directory, files);
+        } catch (IOException e) {
+            throw new NotFoundException("Error updating distribution files: " + distributionType);
+        }
+    }
+
     public List<UUID> findFileIds(AdminDistributionType distributionType) {
-        Path directory = DISTRIBUTIONS_FILES_PATH.resolve(distributionType.name().toLowerCase(Locale.ROOT));
+        Path directory = getDistributionDirectory(distributionType);
 
         if (!Files.exists(directory)) {
             return List.of();
@@ -59,14 +69,63 @@ public class DistributionFileService {
         try {
             String mimeType = Files.probeContentType(path);
 
-            if (mimeType == null) {
-                return "application/octet-stream";
-            }
+            return Objects.requireNonNullElse(mimeType, "application/octet-stream");
 
-            return mimeType;
         } catch (IOException e) {
             return "application/octet-stream";
         }
+    }
+
+    private void saveFiles(Path directory, List<MessageFileRequest> files) throws IOException {
+        if (files == null) {
+            return;
+        }
+
+        for (MessageFileRequest file : files.stream().limit(FILES_LIMIT).toList()) {
+            saveFile(directory, file);
+        }
+    }
+
+    private void saveFile(Path directory, MessageFileRequest file) throws IOException {
+        if (file == null) {
+            return;
+        }
+
+        if (file.getContentBase64() == null || file.getContentBase64().isBlank()) {
+            return;
+        }
+
+        Path filePath = directory.resolve(UUID.randomUUID() + getFileExtension(file));
+
+        try {
+            Files.write(filePath, Base64.getDecoder().decode(file.getContentBase64()));
+        } catch (IllegalArgumentException e) {
+            throw new BadRequestException("Incorrect file content");
+        }
+    }
+
+    private void deleteOldFiles(Path directory) throws IOException {
+        try (var files = Files.list(directory)) {
+            for (Path file : files.filter(Files::isRegularFile).toList()) {
+                if (!file.getFileName().toString().equals(".gitkeep")) {
+                    Files.delete(file);
+                }
+            }
+        }
+    }
+
+    private Path getDistributionDirectory(AdminDistributionType distributionType) {
+        return DISTRIBUTIONS_FILES_PATH.resolve(distributionType.name().toLowerCase(Locale.ROOT));
+    }
+
+    private String getFileExtension(MessageFileRequest file) {
+        String fileName = file.getFileName();
+
+        if (fileName == null || !fileName.contains(".")) {
+            return "";
+        }
+
+        return fileName.substring(fileName.lastIndexOf('.'));
     }
 
     private Optional<UUID> getFileId(Path path) {
